# Chess-Two-Player

./: CMakeLists.txt  LICENSE  README.md  comon.h  main.cpp
GameEngine/: Board.cpp  BoardInitializer.cpp  GameState.cpp  Gamecontroller.cpp  Gamecontroller.h  SpecialOperations.cpp  main.cpp
GameEngine/Pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
GameEngine/Sidepanel/: CaptureTracker.cpp  CaptureTracker.h  MoveHistory.h
GameEngine/board/: Board.cpp  Board.h  BoardInitializer.cpp  BoardInitializer.h
GameEngine/protocols/: GameState.cpp  GameState.h  MoveRules.cpp  MoveRules.h  SpecialOperations.cpp  SpecialOperations.h
InteractiveBoard/: GraphicsRenderer.cpp  GraphicsRenderer.h  ViewTypes.h  main_gui.cpp
InteractiveBoard/Sidepanel/: SidePanel.cpp  SidePanel.h
Test/: CMakeLists.txt  Test_GameEngine.cpp
